# MarkovianTraining

./: .gitattributes  .gitignore  .submission_exclude  CRITIC_UPDATE_FEATURE.md  DATASET_ANSWER_FORMATS_GUIDE.md  EVALUATION_CHANGE_ANALYSIS.md  EVALUATION_GUIDE.md  MMLU_EVAL_MYSTERY.md  MarkovianTraining.code-workspace  PROMPT_VARIATION_RESULTS.md  QWEN25_INTEGRATION_SUMMARY.md  README.md  README.original.md  README_new.md  REFACTOR_SUMMARY.md  SUBMISSION_INSTRUCTIONS.md  TRAINING_ANALYSIS.md  TRAINING_SUMMARY.txt  VALIDATION_RESULTS.md  __init__.py  analyze_messages.py  aqua_prompt_test_results.txt  collect_remote_experiments.sh  compare_extraction_demo.py  compile_sweep_table.py  convo_claude.py  convo_multi.py  convo_multi_claude.py  data.py  download.sh  eval_llama_model_smaller.py  evaluate_all_results.sh  evaluate_all_runs.py  evaluate_llama_model.py  evaluate_llama_model_direct.py  gemma_speed_test.py  markovian_comparison_table.md  mmlu_retroactive_eval_FIXED.txt  organize_and_deploy.py  perturbation_fragility_matrix.md  (+25 more)
LatexFolder/: aaai2026.bib  aaai2026.sty  anonymous-submission-latex-2026-clean.tex  anonymous-submission-latex-2026.aux  anonymous-submission-latex-2026.bbl  anonymous-submission-latex-2026.blg  anonymous-submission-latex-2026.fdb_latexmk  anonymous-submission-latex-2026.fls  anonymous-submission-latex-2026.tex  appendix.aux  appendix.bbl  appendix.blg  appendix.fdb_latexmk  appendix.fls  appendix.out  appendix.tex  iclr2026_conference.aux  iclr2026_conference.bbl  iclr2026_conference.bib  iclr2026_conference.blg  iclr2026_conference.fdb_latexmk  iclr2026_conference.fls  iclr2026_conference.out  iclr2026_conference.tex  instructions.aux
LlamaCodeSnippets/: gpu_job.sh  llama7b-accelerate.py  llama7b-accelerate2.py  peter-mock-llama.py
Prompting/: simplified-loop.txt
WriteUp/: ProsocialityInLMs.aux  ProsocialityInLMs.out  ProsocialityInLMs.tex
data/: gpt-4_20230908_dataset.txt  gpt-4_20230908_math.txt  st_patrick_biography.txt
examples/: plot_moving_baseline_metrics.sh
messages/: convo_0.txt  convo_1.txt  convo_2.txt
reports/: accuracy_report.json  qa_fragility.json  qa_fragility.md  wiki_fragility.md  wiki_table.md
results/: losses.html  losses.html.REMOVED.git-id  (+2 more)
(+236 files in other folders)
